[package]
name = "rlox"
version = "0.1.0"
authors = ["Vo Le Tung <15053897+letung3105@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies]
itertools = "0.10.1"
string-interner = "0.12.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "basics"
harness = false
